kubernetes/manifests/c80c253f-e802-46a9-9083-c4b23acac07d/nodebb-c80c25.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodebb-c80c25
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodebb-c80c25
  template:
    metadata:
      labels:
        app: nodebb-c80c25
    spec:
      containers:
        - name: nodebb-c80c25
          image: zploy-app-c80c253f-e802-46a9-9083-c4b23acac07d
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4567
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: nodebb-c80c25
  namespace: default
spec:
  selector:
    app: nodebb-c80c25
  ports:
    - port: 80
      targetPort: 4567
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodebb-c80c25
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nodebb.zploy.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodebb-c80c25
                port:
                  number: 80
